@@ -34,20 +34,25 @@
 			$this->SetOrientation($style);
 			$this->show_header = true;
 			$this->nodeid = get_current_nodeid();
+			$this->groupid = 0;
 		}
 
-		function SetOrientation($value){
+		function setOrientation($value){
 			if($value != STYLE_HORISONTAL && $value != STYLE_VERTICAL)
 				return $this->error("Incorrect value for SetOrientation [$value]");
 
 			$this->style = $value;
 		}
 
-		function SetNodeid($nodeid){
+		function setNodeid($nodeid){
 			$this->nodeid = (int)$nodeid;
 		}
 		
-		function HideHeader(){
+		function set_host_group($groupid){
+			$this->groupid = $groupid;
+		}
+		
+		function hideHeader(){
 			$this->show_header = false;
 		}
 
@@ -61,9 +66,17 @@
 			$this->CleanItems();
 
 			$ok = $uncn = $info = $warn = $avg = $high = $dis = 0;
-
-			$db_priority = DBselect('SELECT t.priority,t.value,count(*) as cnt '.
-							' FROM triggers t,hosts h,items i,functions f '.
+			
+			$sql_from = '';
+			$sql_where = '';
+			if($this->groupid > 0){
+				$sql_from = ', hosts_groups hg ';
+				$sql_where = ' AND hg.groupid='.$this->groupid.
+								' AND h.hostid=hg.hostid ';
+			}
+			
+			$db_priority = DBselect('SELECT t.priority,t.value,count(DISTINCT t.triggerid) as cnt '.
+							' FROM triggers t,hosts h,items i,functions f '.$sql_from.
 							' WHERE t.status='.TRIGGER_STATUS_ENABLED.
 								' AND f.itemid=i.itemid '.
 								' AND h.hostid=i.hostid '.
@@ -71,6 +84,7 @@
 								' AND t.triggerid=f.triggerid '.
 								' AND i.status='.ITEM_STATUS_ACTIVE.
 								' AND '.DBcondition('t.triggerid',$available_triggers).
+								$sql_where.
 							' GROUP BY t.priority,t.value');
 			while($row=DBfetch($db_priority)){
 				
